[CLEANUP] .metadata 및 Eclipse 설정 파일 제거 및 무시 처리

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,16 @@ application-*.properties
 .DS_Store
 Thumbs.db
 * text=auto
+
+# Eclipse
+.metadata/
+.settings/
+bin/
+*.log
+*.tmp
+*.bak
+*.swp
+*.zip
+*.ser
+*.class
+.DS_Store
