--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'org.openjfx.javafxplugin' version '0.0.13'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -33,8 +34,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
 
+	implementation 'org.openjfx:javafx-controls:21.0.1'
+	implementation 'org.openjfx:javafx-fxml:21.0.1'
+}
+javafx {
+	version = "21.0.1"
+	modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
